# Turtle-Carnage

./: README.md
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: turtle_carnage_app.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/srv/: TargetTurtleParams.srv
turtle_carnage/: package.xml  setup.cfg  setup.py
turtle_carnage/turtle_carnage/: turtle_controller.py  turtle_spawner.py
